# v2.pexipay

./: API_DOCUMENTATION.md  CIRCOFLOWS_IMPLEMENTATION.md  CREDENTIALS.md  NAVIGATION.md  README.md  ROUTES.md  SANDBOX.md  add-test-api-key.ts  check-api-key.ts  development_scope.md  package.json  pnpm-lock.yaml  prisma.config.ts  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/admin/: layout.tsx
app/admin/audit/: page.tsx
app/admin/dashboard/: page.tsx
app/admin/kyc/: KYCContent.tsx  page.tsx
app/admin/merchants/: page.tsx
app/admin/settlements/: SettlementsContent.tsx  page.tsx
app/admin/users/: page.tsx
app/api/api-keys/: route.ts
app/api/audit-logs/: route.ts
app/api/contacts/: route.ts
app/api/payments/: route.ts
app/auth/: layout.tsx
app/community/: page.tsx
app/contact/: page.tsx
app/dashboard/: layout.tsx  page.tsx
app/docs/api/: page.tsx
app/faq/: page.tsx
app/help/: page.tsx
app/merchant/: layout.tsx
app/privacy/: page.tsx
app/super-merchant/: layout.tsx
app/terms/: page.tsx
app/test-shop/: README.md  page.tsx
components/: Accordion.tsx  CardForm.tsx  ClientLayout.tsx  DashboardLayout.tsx  Footer.tsx  Navbar.tsx  Sidebar.tsx  TopNavbar.tsx
docs/: CIRCOFLOWS_INTEGRATION.md  integration-guide.md  payment-links.md  test-cards.md
docs/sdk/: EXAMPLES.md  QUICK_REFERENCE.md  README.md  index.md
lib/: prisma.ts
lib/audit/: logger.ts
lib/auth/: api-key.ts  jwt.ts  rbac.ts
lib/circoflows/: client.ts
lib/fraud/: engine.ts
lib/middleware/: auth.ts
lib/queue/: config.ts
lib/sandbox/: processor.ts  test-cards.ts
lib/settlement/: ledger.ts  service.ts
prisma/: schema.prisma  seed.ts
sdk/: INTEGRATION_GUIDE.md
sdk/javascript/: README.md  package.json  pnpm-lock.yaml
sdk/php/: composer.json
sdk/python/: pyproject.toml
sdk/python/pexipay/: __init__.py
sdk/python/pexipay/resources/: payments.py
(+105 files in other folders)
